2006-04-21  Don Allingham  <don@gramps-project.org>
	* src/plugins/FilterEditor.py: fix close arguments
	* src/plugins/ChangeNames.py: fix close arguments
	* src/plugins/Merge.py: fix close arguments
	* src/plugins/ChangeTypes.py: fix close arguments
	* src/plugins/PatchNames.py: fix close arguments
	* src/plugins/Desbrowser.py: check for active person
	* src/GrampsDb/_ReadXML.py: fix typos
	* src/PluginUtils/_PluginMgr.py: handle module to description mapping
	* src/Editors/_EditRepoRef.py: fix typos
	* src/Editors/_EditMediaRef.py: define warnbox
	* src/GrampsDb/_DbUtils.py: fix old call to get_child_handle_list
	* src/Editors/_EditSource.py: remove warnbox
	* src/Editors/_EditMedia.py: remove warnbox
	* src/PluginUtils/_PluginStatus.py: add viewing of exceptions

2006-04-21  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Set dirty flag to force redrawing
	when changing tree style
	* src/plugins/TestcaseGenerator.py: Update to new GrampsTypes
	
2006-04-21  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditRepository.py: fix warnbox call
	* src/Editors/_EditPlace.py: fix warnbox call
	* src/Editors/_EditRepoRef.py: Add backreference tab

2006-04-21  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ConstXML.py: Remove.
	* src/RelLib/_GrampsType.py (set_from_xml_str): Remove extra def.
	* src/PluginUtils/_PluginStatus.py: Many small fixes.
	* src/ManagedWindow.py (GrampsWindowManager.display_menu_list):
	Fix building the menu for child-less windows.

2006-04-21  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: AttributeType changes
	* src/GrampsDb/_ReadGedcom.py: AttributeType changes
	* src/GrampsDb/_ReadXML.py: AttributeType changes
	* src/GrampsDb/_ConstXML.py: AttributeType changes
	* src/GrampsDb/_WriteXML.py: AttributeType changes
	* src/GrampsDb/_GrampsBSDDB.py: AttributeType changes
	* src/RelLib/__init__.py: AttributeType changes
	* src/RelLib/_AttributeType.py: AttributeType changes