@@ -1,4 +1,7 @@
 2006-04-21  Don Allingham  <don@gramps-project.org>
+	* src/StartupDialog.py: fix close
+	* src/plugins/Desbrowser.py: Use ActivPersonTool
+	* src/PluginUtils/_Tool.py: active person tool added
 	* src/plugins/FilterEditor.py: fix close arguments
 	* src/plugins/ChangeNames.py: fix close arguments
 	* src/plugins/Merge.py: fix close arguments
